--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                ng-repeat="step in listOfSteps"
                ng-mouseenter="hover = true"
                ng-mouseleave="hover = false"
-               ng-if="step.step_number<listOfSteps.length-1"content
+               ng-if="step.step_number<listOfSteps.length-1"
                ng-class="{'selected-step':selectedStepsList.indexOf(step)!=-1 || noteStepList.indexOf(step.id)!=-1}">
 
               <div class="grid__item one-tenth input-start-container">
@@ -55,7 +55,7 @@
             <!-- Buttons to toggle on/off notes -->
                 <div class="grid__item six-eighths">
                 <div id="{{step.id}}">
-                    <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.lengtcontenth-2))">Step {{step.step_number}}</h2>
+                    <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.length-2))">Step {{step.step_number}}</h2>
                 </div>
                 <div id="{{tutorial.steps[tutorial.steps.length-2].id}}" ng-if="(step.step_number==(tutorial.steps.length-2))"></div>
                 <div class="main-content" ng-bind-html="step.html"></div>
@@ -154,7 +154,7 @@
                             add-reply="addingReply"
                             can-show-note="canShowNote"
                             baseline="false"
-                            show-list="showStepList"content
+                            show-list="showStepList"
                             user="contributor"
                             general="note.step_id[0] === listOfSteps[listOfSteps.length-1].id"
                             date="dateFormat(note)"
@@ -173,7 +173,7 @@
 
               var chosenFilter = null;
               function filterSelected(){
-                  chosenFilter = parseInt(document.getElementById("filter").value);content
+                  chosenFilter = parseInt(document.getElementById("filter").value);
                   document.getElementById("apply").click();
               }
           </script>
@@ -187,7 +187,6 @@
                     <div ng-repeat="step in currentStep">
                         <a class="close-button" ng-click="closeInput()" href="#{{step.id}}">Close</a>
                         <a class="return-button-first return-button" href="#{{step.id}}">Return</a>
-content
                     </div>
                     <div class="selected-steps" ng-if="selectedStepsList.length == 0">None Selected</div>
                     <div>
@@ -206,7 +205,7 @@ content
                               <a class="menu-action-button preview-button" href="#{{step.id}}"></a>
                               <button class="menu-action-button" id="step {{step.step_number}}" ng-click="stepSelected(step);numberList()" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">
                                   <div class="plus-action-button" ng-if="selectedStepsList.indexOf(step)==-1">+</div>
-                                  <div class="minus-action-button" ng-if="selectedStepsList.indcontentexOf(step)!=-1">-</div>
+                                  <div class="minus-action-button" ng-if="selectedStepsList.indexOf(step)!=-1">-</div>
                                </button>
                             <div class="step-list" ng-if="step.step_number==0" ng-class="{'disabled-steps':general}">INTRO</div>
                             <div class="step-list" ng-if="step.step_number==listOfSteps.length-2" ng-class="{'disabled-steps':general}">END</div>
