--- a/app/index.html
+++ b/app/index.html
@@ -48,17 +48,17 @@
                ng-mouseleave="hover = false"
                ng-if="step.step_number<listOfSteps.length-1"
                ng-class="{'selected-step':selectedStepsList.indexOf(step)!=-1 || noteStepList.indexOf(step.id)!=-1}">
-
+              
               <div class="grid__item one-tenth input-start-container">
                   <button class="input-start icon" ng-if="!tutorial.baseline && inputPos === null" ng-show="hover && selectedLine != $index" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" tooltip="Add a note"></button>
               </div>
-            <!-- Buttons to toggle on/off notes -->
-                <div class="grid__item six-eighths">
-                <div id="{{step.id}}">
-                    <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.length-2))">Step {{step.step_number}}</h2>
-                </div>
-                <div id="{{tutorial.steps[tutorial.steps.length-2].id}}" ng-if="(step.step_number==(tutorial.steps.length-2))"></div>
-                <div class="main-content" ng-bind-html="step.html"></div>
+              <!-- Buttons to toggle on/off notes -->
+              <div class="grid__item six-eighths">
+                  <div id="{{step.id}}">
+                      <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.lengtcontenth-2))">Step {{step.step_number}}</h2>
+                  </div>
+                  <div id="{{tutorial.steps[tutorial.steps.length-2].id}}" ng-if="(step.step_number==(tutorial.steps.length-2))"></div>
+                  <div class="main-content" ng-bind-html="step.html"></div>
               </div><!--
 
                 --><div class="grid__item one-twelfth is-left-aligned" >
@@ -67,38 +67,38 @@
                       ng-if="!tutorial.baseline && checkForCategory(step, 'corrections')"
                       ng-click="stepIcon(step.step_number);newFilter('corrections')"
                       tooltip="Corrections">
-                      <div class = "icon__number">{{numberOfNotes(step,"corrections")}}</div>
+                  <div class = "icon__number">{{numberOfNotes(step,"corrections")}}</div>
               </button>
 
               <button class="icon icon-methods icon-bar"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'methods')"
                       ng-click="stepIcon(step.step_number);newFilter('methods')"
                       tooltip="What is this?">
-                      <div class="icon__number">{{numberOfNotes(step,"methods")}}</div>
+                  <div class="icon__number">{{numberOfNotes(step,"methods")}}</div>
               </button>
 
               <button class="icon icon-details icon-bar"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'details')"
                       ng-click="stepIcon(step.step_number);newFilter('details')"
                       tooltip="Tell me more!">
-                      <div class="icon__number">{{numberOfNotes(step,"details")}}</div>
+                  <div class="icon__number">{{numberOfNotes(step,"details")}}</div>
               </button>
 
               <button class="icon icon-questions icon-bar"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'questions')"
                       ng-click="stepIcon(step.step_number);newFilter('questions')"
                       tooltip="Questions">
-                      <div class="icon__number">{{numberOfNotes(step,"questions")}}</div>
+                  <div class="icon__number">{{numberOfNotes(step,"questions")}}</div>
               </button>
 
               <button class="icon icon-other icon-bar"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'other')"
                       ng-click="stepIcon(step.step_number);newFilter('other')"
                       tooltip="Other">
-                      <div class="icon__number">{{numberOfNotes(step,"other")}}</div>
+                  <div class="icon__number">{{numberOfNotes(step,"other")}}</div>
               </button>
 
-              </div></div><!--
+          </div></div><!--
 
            --><div>
                   <div ng-if="tutorial.notes" class="three-tenths">
