--- a/app/index.html
+++ b/app/index.html
@@ -48,9 +48,10 @@
                ng-if="step.step_number!== listOfSteps.length"
                ng-class="{'selected-step':selectedStepsList.indexOf(step)!=-1}">
 
-              <div class="grid__item one-tenth input-start-container">
+              <div class="grid__item one-tenth input-start-container is-center-aligned">
               <!-- Button for adding a note -->
-              <button class="input-start icon" ng-if="inputPos === null && !tutorial.baseline" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" ng-show="hover && selectedLine != $index" tooltip="Add a note"></button></div><!--
+              <button class="input-start icon" ng-if="inputPos === null && !tutorial.baseline" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" ng-show="hover && selectedLine != $index" tooltip="Add a note"></button>
+              </div><!--
               --><div class="grid__item six-eighths">
               <div id="{{step.id}}">
                   <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.length-2))">Step {{step.step_number}}</h2>
