--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
               <!-- Buttons to toggle on/off notes -->
               <div class="grid__item six-eighths">
                   <div id="{{step.id}}">
-                      <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.lengtcontenth-2))">Step {{step.step_number}}</h2>
+                      <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.length-2))">Step {{step.step_number}}</h2>
                   </div>
                   <div id="{{tutorial.steps[tutorial.steps.length-2].id}}" ng-if="(step.step_number==(tutorial.steps.length-2))"></div>
                   <div class="main-content" ng-bind-html="step.html"></div>
