--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,6 @@
     <!-- build:[src] scripts/ -->
     <script src="modernizr/modernizr.js"></script>
     <!-- /build -->
-      <!--<link href="/select2/select2.min.css" rel="stylesheet" />
-      <script src="select2/select2.min.js"></script>-->
 
   </head>
   <body ng-controller="mainController">
@@ -47,9 +45,9 @@
                ng-mouseleave="hover = false"
                ng-if="step.step_number<listOfSteps.length-1"
                ng-class="{'selected-step':selectedStepsList.indexOf(step)!=-1 || noteStepList.indexOf(step.id)!=-1}">
-              
-              <div class="grid__item one-tenth input-start-container is-center-aligned">
-                  <button class="input-start icon" ng-if="!tutorial.baseline && inputPos === null" ng-show="hover && selectedLine != $index" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" tooltip="Add a note"></button>
+
+              <div class="grid__item one-tenth">
+                  <button class=""></button>
               </div>
               <!-- Buttons to toggle on/off notes -->
               <div class="grid__item six-eighths">
@@ -60,78 +58,9 @@
                   <div class="main-content" ng-bind-html="step.html"></div>
               </div><!--
 
-                <div class="grid__item one-twelfth is-left-aligned" >
-
-              <button class="icon icon-corrections icon-bar"
-                      ng-if="!tutorial.baseline && checkForCategory(step, 'corrections')"
-                      ng-click="stepIcon(step.step_number);newFilter('corrections')"
-                      tooltip="Corrections">
-                  <div class = "icon__number">{{numberOfNotes(step,"corrections")}}</div>
-              </button>
-
-              <button class="icon icon-methods icon-bar"
-                      ng-if="!tutorial.baseline && checkForCategory(step, 'methods')"
-                      ng-click="stepIcon(step.step_number);newFilter('methods')"
-                      tooltip="What is this?">
-                  <div class="icon__number">{{numberOfNotes(step,"methods")}}</div>
-              </button>
-
-              <button class="icon icon-details icon-bar"
-                      ng-if="!tutorial.baseline && checkForCategory(step, 'details')"
-                      ng-click="stepIcon(step.step_number);newFilter('details')"
-                      tooltip="Tell me more!">
-                  <div class="icon__number">{{numberOfNotes(step,"details")}}</div>
-              </button>
-
-              <button class="icon icon-questions icon-bar"
-                      ng-if="!tutorial.baseline && checkForCategory(step, 'questions')"
-                      ng-click="stepIcon(step.step_number);newFilter('questions')"
-                      tooltip="Questions">
-                  <div class="icon__number">{{numberOfNotes(step,"questions")}}</div>
-              </button>
-
-              <button class="icon icon-other icon-bar"
-                      ng-if="!tutorial.baseline && checkForCategory(step, 'other')"
-                      ng-click="stepIcon(step.step_number);newFilter('other')"
-                      tooltip="Other">
-                  <div class="icon__number">{{numberOfNotes(step,"other")}}</div>
-              </button>-->
-
-          </div></div><!--
-
            --><div>
                   <div ng-if="tutorial.notes" class="three-tenths">
-                      <!--<div class="grid__item two-tenths filter-container">-->
-                          <!--<div class="note-display filter-title">FILTER</div>
-                          <button class="plain-button filter-button" ng-click="clear()">CLEAR</button><br>
-                          <!--script type="text/javascript">
-                              $(".js-example-basic-multiple").select2();
-                          </script-->
-                          <!--<div class="note-display filter-title filter-section-title">CATEGORY:</div>
-                          <button class="filter-icon filter-icon-corrections" ng-if="!tutorial.baseline" ng-class="{'selected selected-corrections': categoryFilter == 'corrections'}" ng-click="newFilter('corrections')" tooltip="Corrections"></button>
-                          <button class="filter-icon filter-icon-methods" ng-if="!tutorial.baseline" ng-class="{'selected selected-corrections': categoryFilter == 'methods'}" ng-click="newFilter('methods')" tooltip="What is this?"></button>
-                          <button class="filter-icon filter-icon-details" ng-if="!tutorial.baseline" ng-class="{'selected selected-corrections': categoryFilter == 'details'}"  ng-click="newFilter('details')" tooltip="Tell me more!"></button>
-                          <button class="filter-icon filter-icon-questions" ng-if="!tutorial.baseline" ng-class="{'selected selected-corrections': categoryFilter == 'questions'}"  ng-click="newFilter('questions')" tooltip="Questions"></button>
-                          <button class="filter-icon filter-icon-other" ng-if="!tutorial.baseline" ng-class="{'selected selected-corrections': categoryFilter == 'other'}"  ng-click="newFilter('other')" tooltip="Other"></button><br>
-                          <button id="apply" ng-click="newSort();newFilter(chosenFilter)"></button>
-                          <div class="note-display filter-title filter-section-title">STEPS:</div>
-                          <label>
-                              <select class="dropdown" id="filter" onchange="filterSelected()">
-                                  <option value="none" style="display:none">STEP</option>
-                                  <option value="{{tutorial.steps.length-1}}">GENERAL</option>
-                                  <option value="0">INTRO</option>
-                                  <option ng-repeat="number in listOfSteps"
-                                          value="{{number.step_number}}"
-                                          ng-if="number.step_number>0 && number.step_number<listOfSteps.length-2">
-                                          {{number.step_number}}
-                                  </option>
-                                  <option value="{{tutorial.steps.length-2}}">END</option>
-                              </select>
-                          </label>
-
-
-                      </div>-->
-                      <div class="grid__item three-tenths filter-container sort">
+                      <div class="grid__item three-tenths sort-container sort">
                           <div class="note-display">SORT</div>
                           <label>
                           <select class="dropdown" id="sort" onchange="sortSelected()">
@@ -139,7 +68,6 @@
                           <option value="old">OLDEST</option>
                           <option value="high">RATE:HIGH</option>
                           <option value="low">RATE:LOW</option>
-                          <!--<option value="category">CATEGORY</option>--->
                           </select>
                           </label>
                       </div>
@@ -162,6 +90,13 @@
                             notelist="getNoteList(note)">
                       </note>
                       </div>
+                      <div class="input-container grid__item three-tenths">
+                          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                          <div class ="window-title">Write your note below.</div>
+                          <br>
+                          <textarea class="input-text" ng-model="$parent.newNote" rows="6" placeholder="Please enter your note here."></textarea>
+                          <button ng-click="submitNote()" class="plain-button">Submit</button>
+                      </div>
                   </div>
           </div>
           <script>
@@ -170,91 +105,7 @@
                   chosenSort = document.getElementById("sort").value.toString();
                   document.getElementById("apply").click();
               }
-
-              var chosenFilter = null;
-              function filterSelected(){
-                  chosenFilter = parseInt(document.getElementById("filter").value);
-                  document.getElementById("apply").click();
-              }
           </script>
-          <div class="input-container grid__item one-quarter" ng-if="inputPos != null" ng-style="{'top':50 + 'px'}" style="height:300px;padding: 5px;">
-              <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-              <div class ="window-title">Write your note below.</div>
-              <div class="close-button reply-close" ng-click="closeInput()">Close</div>
-              <br>
-              <!--<div class ="window-title" ng-if="replyTo != null">Replying to {{$parent.replyToContributor}}.</div>
-              <div ng-if="!tutorial.baseline && replyTo==null">
-                <div ng-if="!secondMenu">
-                    <div class="window-title" >COMMENTING ON</div>
-                    <div ng-repeat="step in currentStep">
-                        <a class="close-button" ng-click="closeInput()" href="#{{step.id}}">Close</a>
-                        <a class="return-button-first return-button" href="#{{step.id}}">Return</a>
-                    </div>
-                    <div class="selected-steps" ng-if="selectedStepsList.length == 0">None Selected</div>
-                    <div>
-                        <div class="selected-steps" ng-if="selectedStepsList.length !=0">STEPS: {{list.toString()}}</div>
-                        <button class="menu-button menu-one" ng-click="menuSwitch()" ng-show="true"></button>
-                    </div>
-                    <br>
-                    <div>
-                          <a class="menu-action-button preview-button" href="#general"></a>
-                          <button class="menu-action-button" ng-click="chosenGeneral();stepSelected(listOfSteps[listOfSteps.length-1]);numberList();" ng-class="{'selected-menu-button':selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])!=-1}">
-                              <div class="plus-action-button" ng-if="selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])==-1">+</div>
-                              <div class="minus-action-button" ng-if="selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])!=-1">-</div>
-                          </button>
-                          <div class="step-list">GENERAL</div>
-                          <div ng-repeat="step in listOfSteps" ng-if="step.step_number <listOfSteps.length-1" ng-style="{'disabledSteps':general}">
-                              <a class="menu-action-button preview-button" href="#{{step.id}}"></a>
-                              <button class="menu-action-button" id="step {{step.step_number}}" ng-click="stepSelected(step);numberList()" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">
-                                  <div class="plus-action-button" ng-if="selectedStepsList.indexOf(step)==-1">+</div>
-                                  <div class="minus-action-button" ng-if="selectedStepsList.indexOf(step)!=-1">-</div>
-                               </button>
-                            <div class="step-list" ng-if="step.step_number==0" ng-class="{'disabled-steps':general}">INTRO</div>
-                            <div class="step-list" ng-if="step.step_number==listOfSteps.length-2" ng-class="{'disabled-steps':general}">END</div>
-                            <div class="step-list" ng-if="step.step_number!=0 && step.step_number <listOfSteps.length-2" ng-class="{'disabled-steps':general}">STEP {{step.step_number}}</div>
-                          </div>
-                    </div>
-                </div>
-
-                <div ng-if="secondMenu">
-                   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                   <script src="scripts/smooth-scrolling.js"></script>
-                   <div class="window-title categories-title" ng-if="secondMenu">CATEGORIES</div>
-                   <div ng-repeat="step in currentStep">
-                      <a class="return-button-second return-button" href="#{{step.id}}">Return</a>
-                      <a class="close-button close-button-second" ng-click="closeInput()" href="#{{step.id}}">Close</a>
-                   </div>
-                     <button ng-click="categorySelected('correctio <div class="close-button reply-close" ng-click="closeInput()">Close</div>
-                      <br>ns')" class="icon icon-corrections" ng-class="{'selected selected-corrections': inputCategory == 'corrections'}" tooltip="Corrections"></button>
-                     <button ng-click="categorySelected('methods')" class="icon icon-methods" ng-class="{'selected selected-methods': inputCategory == 'methods'}" tooltip="What is this?"></button>
-                     <button ng-click="categorySelected('details')" class="icon icon-details" ng-class="{'selected selected-details': inputCategory == 'details'}" tooltip="Tell me more!"></button>
-                     <button ng-click="categorySelected('questions')" class="icon icon-questions" ng-class="{'selected selected-questions': inputCategory == 'questions'}" tooltip="Questions"></button>
-                     <button ng-click="categorySelected('other')" class="icon icon-other" ng-class="{'selected selected-other': inputCategory == 'other'}" tooltip="Other notes"></button>
-                     <button class="menu-two menu-button" ng-click="menuSwitch()"></button>
-                     <div ng-if="inputCategory==''">PLEASE SELECT A CATEGORY</div>
-                </div>
-              </div>
-
-              <div ng-show="showTextarea || replyTo!==null">
-                <div class="description"  ng-if="!tutorial.baseline && replyTo==null">
-                  <div ng-if="inputCategory == 'corrections'">Found a mistake? Help us out by pointing it out!</div>
-                  <div ng-if="inputCategory == 'methods'">Information specific to software. Point out useful tools or other ways of doing the tutorial.</div>
-                  <div ng-if="inputCategory == 'details'">Useful information that may help others understand and learn from the tutorial.</div>
-                  <div ng-if="inputCategory == 'questions'">Need help with the tutorial? Ask a question for others to answer.</div>
-                  <div ng-if="inputCategory == 'other'">Have a note that doesn't fit in the other categories? Use this one!</div>
-                </div>
-                <div class="software-container" ng-if="(inputCategory == 'methods' || inputCategory == 'other') && !tutorial.baseline">
-                  <div ng-if="inputCategory == 'methods'">Your note is relevant for which software?</div>
-                  <div ng-if="inputCategory == 'other'">How would you label your note?</div>
-                  <input type="text" ng-model="$parent.$parent.extraInput"/>
-                </div>
-                <div ng-if="replyTo!=null">
-                      <div class="close-button reply-close" ng-click="closeInput()">Close</div>
-                      <br>
-                </div>-->
-                <textarea class="input-text" ng-model="$parent.newNote" rows="6" placeholder="Please enter your note here."></textarea>
-                <button ng-click="submitNote()" class="plain-button">Submit</button>
-              </div>
           </div>
           </div>
       </div>
