--- a/app/index.html
+++ b/app/index.html
@@ -50,18 +50,23 @@
                ng-class="{'selected-step':selectedStepsList.indexOf(step)!=-1 || noteStepList.indexOf(step.id)!=-1}">
               
               <div class="grid__item one-tenth input-start-container is-center-aligned">
-                  <button class="input-start icon" ng-if="inputPos === null" ng-show="hover && selectedLine != $index" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" tooltip="Add a note"></button>
+                  <!--<button class="input-start icon" ng-if="inputPos === null" ng-show="hover && selectedLine != $index" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" tooltip="Add a note"></button>-->
               </div>
               <!-- Buttons to toggle on/off notes -->
               <div class="grid__item six-eighths">
                   <div id="{{step.id}}">
-                      <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.lengtcontenth-2))">Step {{step.step_number}}</h2>
+                      <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.length-2))">Step {{step.step_number}}</h2>
                   </div>
                   <div id="{{tutorial.steps[tutorial.steps.length-2].id}}" ng-if="(step.step_number==(tutorial.steps.length-2))"></div>
                   <div class="main-content" ng-bind-html="step.html"></div>
               </div><!--
 
                 --><div class="grid__item one-twelfth is-left-aligned" >
+
+              <div class="grid__item one-tenth input-start-container">
+                  <!-- Button for adding a note -->
+                  <button class="input-start icon" ng-if="inputPos === null" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" ng-show="hover && selectedLine != $index" tooltip="Add a note"></button>
+              </div>
 
               <button class="icon icon-corrections icon-bar"
                       ng-if="checkForCategory(step, 'corrections')"
