--- a/app/index.html
+++ b/app/index.html
@@ -144,7 +144,7 @@
 
                       <div class="grid__item three-tenths note-container">
                       <note ng-repeat="note in listOfNotes"
-                            ng-if="canShowNote(note)"
+                            ng-if="canShowNote(note) && note.reply_to == null"
                             note="note"
                             delete-it="deleteNote"
                             rate-it="newRating"
